--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Revision history for Perl extension VCS::Lite.
 
+0.06  Wed Dec 29 10:05:12 2004
+	- Change underlying object type to be a hash. 
+	- Implement windowing of diffs.
+	- Distribute vldiff,vlpatch and vlmerge as exe_files.
+	 
 0.05  Sun Dec 14 15:00:16 2003
 	- Resolve bugs reported on RT by removing merge method in 
 	  VCS::Lite::Delta and references to it. Remove merge.t, keep 
