--- a/README
+++ b/README
@@ -29,6 +29,7 @@ Note that the underlying object type has changed from an ARRAY to a HASH.
 COPYRIGHT AND LICENCE
 
 Copyright (C) 2003-2006 Ivor Williams
+Copyright (C) 2009      Barbie
 
 This library is free software; you can redistribute it and/or modify
 it under the same terms as Perl itself. 
